--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
+
       <h1 class="sitename">Caio Rodrigo</h1>
     </a>
 
@@ -84,7 +83,7 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
+
     <section id="hero" class="hero section dark-background">
 
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
@@ -94,15 +93,11 @@
         <p>Iniciando em <span class="typed" data-typed-items="HTML, JavaScript, CSS, Bootstrap, SQL, Linux"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
-    </section><!-- /Hero Section -->
-
-    <!-- About Section -->
+    </section>
     <section id="about" class="about section">
-
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Sobre</h2>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -135,25 +130,20 @@
               </div>
             </div>
            <!-- <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Depois eu coloco mais alguma coisa relevante
             </p>-->
           </div>
         </div>
 
       </div>
 
-    </section><!-- /About Section -->
+    </section>
 
-    
-
-    <!-- Skills Section -->
     <section id="skills" class="skills section light-background">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -165,21 +155,21 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>
 
             <div class="progress">
               <span class="skill"><span>CSS</span> <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>
 
             <div class="progress">
               <span class="skill"><span>JavaScript</span> <i class="val">25%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>
 
           </div>
 
@@ -190,38 +180,34 @@
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>
 
             <div class="progress">
               <span class="skill"><span>SQL</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>
 
             <div class="progress">
               <span class="skill"><span>Linux</span> <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div>
 
           </div>
 
         </div>
 
       </div>
+    </section>
 
-    </section><!-- /Skills Section -->
-
-    <!-- Resume Section -->
     <section id="resume" class="resume section">
-
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resumo</h2>
         <p>Colaborar em um ambiente de trabalho onde possa colocar em pratica meus conhecimentos em favor da instituição na qual viso integrar, focando sempre o beneficio e o crescimento da organização e o crescimento profissional.</p>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container">
 
@@ -239,7 +225,7 @@
                 <li>(61) 3336-6605</li>
                 <li>contato@brsitemas.com.br</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <h3 class="resume-title">Graduação - Cursando</h3>
             <div class="resume-item">
@@ -247,14 +233,14 @@
               <h5>2024</h5>
               <p><em>Rua Copaíba, nº 01 Torre B Sala 1112 Lote 01, Aguas Claras</em></p>
               <p>Tenha uma carreira promissora em tecnologia com a faculdade de Análise e Desenvolvimento de Sistemas EAD. O curso de ADS é 100% online e reconhecido pelo MEC.</p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>Colégio Polivalente</h4>
               <h5>2013 - 2016</h5>
               <p><em>Módulo I, Lotes 20/24, Residencial Santa Maria, Santa Maria – DF</em></p>
               <p>O Colégio Integrado Polivalente traduz-se pela participação efetiva de profissionais no processo de promoção pessoal e de restituição da cidadania daquelas pessoas que em nosso próprio território ou em outros não tiveram oportunidade de frequentar escola na idade apropriada. Instituir e manter o Colégio exigem determinação e persistência da Direção e professores envolvidos na “Qualidade na arte de ensinar”.</p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
           </div>
 
@@ -270,7 +256,7 @@
                 <li>Gestã́o/Configuração de servidores</li>
                 <li>Administração de Banco de dados</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
           </div>
 
@@ -278,14 +264,12 @@
 
       </div>
 
-    </section><!-- /Resume Section -->
-    <!-- Contact Section -->
+    </section>
     <section id="contact" class="contact section">
 
-      <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contato</h2>
-      </div><!-- End Section Title -->
+      </div>
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -300,15 +284,14 @@
                   <h3>Local</h3>
                   <p>Valparaiso de Goias</p>
                 </div>
-              </div><!-- End Info Item -->
-
+              </div>
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Whatsapp</h3>
                   <p>(61) 9 9519-4930</p>
                 </div>
-              </div><!-- End Info Item -->
+              </div>
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
@@ -316,9 +299,7 @@
                   <h3>Email</h3>
                   <p>caiorodrigocev@gmail.com</p>
                 </div>
-              </div><!-- End Info Item -->
-             
-             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+              </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61335.30583238905!2d-48.02572606775919!3d-16.093663336074567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9359846e04692fcd%3A0xff5f6985b898b684!2sValpara%C3%ADso%20de%20Goi%C3%A1s%20-%20GO!5e0!3m2!1spt-BR!2sbr!4v1727031120267!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
@@ -357,13 +338,13 @@
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div>
 
         </div>
 
       </div>
 
-    </section><!-- /Contact Section -->
+    </section>
 
   </main>
 
@@ -373,23 +354,17 @@
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Caio Rodrigo</strong> <span>All Rights Reserved</span></p>
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-      </div>
+ 
     </div>
 
   </footer>
 
-  <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Preloader -->
+
   <div id="preloader"></div>
 
-  <!-- Vendor JS Files -->
+
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
@@ -401,7 +376,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Main JS File -->
+
   <script src="assets/js/main.js"></script>
 
 </body>
