Alteração de email

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>28</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Grau:</strong> <span>Junior</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>caiorodrigocev@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>contato@caiorodrigocev.com.br</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponivel</span></li>
                 </ul>
               </div>
@@ -295,7 +295,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email</h3>
-                  <p>caiorodrigocev@gmail.com</p>
+                  <p>contato@caiorodrigocev.com.br</p>
                 </div>
               </div>
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61335.30583238905!2d-48.02572606775919!3d-16.093663336074567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9359846e04692fcd%3A0xff5f6985b898b684!2sValpara%C3%ADso%20de%20Goi%C3%A1s%20-%20GO!5e0!3m2!1spt-BR!2sbr!4v1727031120267!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
