--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <a href="https://x.com/caiorodrigocev"  target="_blank"  class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="https://instagram.com/caiorodrigocev_" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
       <a href="https://youtube.com/@CaioRodrigoCev" target="_blank" Class="youtube"><i class="bi bi-youtube"></i></a>
+      <a href="https://www.linkedin.com/in/caio-rodrigo-17a502330/" target="_blank" Class="linkedin"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
