--- a/index.html
+++ b/index.html
@@ -306,11 +306,10 @@
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Enviando</div>
+            
                   <div class="error-message"></div>
-                  <div class="sent-message">Sua mensagem foi enviada. Obrigado!</div>
-
-                  <button type="submit" method ="POST" >Mensagem Enviada</button>
+            
+                  <button type="submit" method ="POST" class="btn btn-primary" >Enviar E-mail</button>
                 </div>
 
               </div>
