--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formsubmit.co/site@caiorodrigocev.com.br" method="post" >
+            <form action="https://formsubmit.co/site@caiorodrigocev.com.br" method="post">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -309,7 +309,7 @@
             
                   <div class="error-message"></div>
             
-                  <button type="submit" method ="POST" class="btn btn-primary" >Enviar E-mail</button>
+                  <button type="submit" method ="POST" class="btn btn-primary" name="_captcha" value="false">Enviar E-mail</button>
                 </div>
 
               </div>
