--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             
                   <div class="error-message"></div>
             
-                  <button type="submit" method ="POST" class="btn btn-primary" name="_next" value="https://caiorodrigocev.com.br/thanks.html">Enviar E-mail</button>
+                  <button type="hidden" method ="POST" class="btn btn-primary" name="_captcha" value="true" name="_next" value="https://caiorodrigocev.com.br/thanks.html">Enviar E-mail</button>
                 </div>
 
               </div>
