email remover captcha3

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             
                   <div class="error-message"></div>
             
-                  <button type="hidden" method ="POST" class="btn btn-primary" name="_next" value="https://caiorodrigocev.com.br/thanks.html" name="_captcha" value="false">Enviar E-mail</button>
+                  <button type="hidden" name="_next" value="https://caiorodrigocev.com.br/thanks.html" name="_captcha" value="false"  method ="POST" class="btn btn-primary" >Enviar E-mail</button>
                 </div>
 
               </div>
