--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div class="col-md-12 text-center">
             
                   <div class="error-message"></div>
-            
+                  <input type="hidden" name="_captcha" value="false">
                   <button type="submit" name="_next" value="https://caiorodrigocev.com.br/thanks.html" name="_captcha" value="false"  method ="POST" class="btn btn-primary" >Enviar E-mail</button>
                 </div>
 
